--- a/Layout/index.html
+++ b/Layout/index.html
@@ -5,5 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layout</title>
   </head>
-  <body></body>
+  <body>
+    <!-- navbar -->
+    <div>navbar</div>
+    <!-- /navabar -->
+
+    <!-- content -->
+    <div>content</div>
+    <!-- /content -->
+
+    <!-- footer -->
+    <div>footer</div>
+    <!-- /footer -->
+  </body>
 </html>
