--- a/Layout/index.html
+++ b/Layout/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layout</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!-- navbar -->
@@ -11,7 +12,7 @@
     <!-- /navabar -->
 
     <!-- content -->
-    <div>content</div>
+    <div></div>
     <!-- /content -->
 
     <!-- footer -->
