--- a/Layout/index.html
+++ b/Layout/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layout</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- navbar -->
@@ -12,7 +12,19 @@
     <!-- /navabar -->
 
     <!-- content -->
-    <div></div>
+    <div class="content flex">
+      <div class="v-ads flex"></div>
+      <div class="card-container">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+      </div>
+    </div>
     <!-- /content -->
 
     <!-- footer -->
