--- a/Layout/style.css
+++ b/Layout/style.css
@@ -6,6 +6,7 @@
 .flex {
     display: flex;
 }
+
 .center {
     justify-content: center;
     align-items: center;
@@ -25,18 +26,19 @@
     background-color: #999;
     width: 200px;
     height: 700px;
+    margin-right: 10px
 }
+
 .card-container {
     width: 100%;
-    height: 700px;
     display: flex;
     flex-wrap: wrap;
-    flex-grow: 1;
 }
+
 .card {
-    background-color: red;
-    width: 100px;
+    background-color: #999;
+    width: 200px;
     height: 250px;
-    margin: 2px;
+    margin: 3px;
     border-radius: 5px;
 }
