--- a/Layout/index.html
+++ b/Layout/index.html
@@ -4,11 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Layout</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="content.css" />
+    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="navbar.css">
   </head>
   <body>
     <!-- navbar -->
-    <div>navbar</div>
+    <div class="navbar center">
+        <div class="column-center">
+            <img src="logo.png" alt="Logo" style="width: 100px;"> <!-- Menyesuaikan ukuran logo -->
+            <div class="search-bar">
+                <input type="text" placeholder="Search">
+                <button type="submit">Search</button>
+            </div>        
+        </div>
+        <div class="shopping-cart"> 
+            <img src="shopping-cart-icon.png" alt="Shopping Cart" style="width: 30px;">
+        </div>
+    </div>
+    
     <!-- /navabar -->
 
     <!-- content -->
@@ -30,7 +44,31 @@
     <!-- /content -->
 
     <!-- footer -->
-    <div>footer</div>
+    <div class="footer">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <img src="https://png.pngtree.com/png-clipart/20230322/ourlarge/pngtree-petshop-logo-with-dog-mascot-png-image_6661615.png" alt="Italian Trulli">
+            </div>
+            <div class="footer-contact">
+                <h3>Hubungi Kami</h3>
+                <p><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z"/></svg>
+                     jl.jalan santuy</p>
+                <p><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48H48zM0 176V384c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V176L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg> 
+                    Email: petpet@gamal.com</p>
+                <i class="fa-solid fa-phone"></i>
+                <p><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"/></svg> 
+                     Telepon: (123) 456-7890</p>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li><a href="#">Shop Now</a></li>
+                    <li><a href="#">Catalog</a></li>
+                    <li><a href="#">shopping cart</a></li>
+                </ul>
+            </div>
+        </div>
+        </div>
+    </div>
     <!-- /footer -->
   </body>
 </html>
